Adds first functioning dockerfile